--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Matrix Rain Effect</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio Designed by Ketan</h1>
-    </header>
-    
-    <section>
-        <p>Hello! I am learning GitHub Actions.</p>
-        <button onclick="showMessage()">Click Me</button>
-        <p id="message"></p>
-    </section>
-
+    <div class="container">
+        <button id="startBtn">Enter the Matrix</button>
+        <canvas id="matrixCanvas"></canvas>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
