--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <button id="startBtn">Enter the Matrix</button>
         <canvas id="matrixCanvas"></canvas>
+        <div id="message" class="hidden">You are now inside the Matrix...</div>
+        <button id="exitBtn" class="hidden">Escape the Matrix</button>
     </div>
+    <audio id="hackingSound" src="hacking.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
